[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/images/bullet_new.png" type="Texture" id=1]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.8616, 118.772 )

[node name="bullet" type="Area2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.26134, -9.67031 )
scale = Vector2( 4.06927, 12.6464 )

[connection signal="area_entered" from="." to="." method="_on_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
